force-app/main/default/objects/ExamDeficiency__c/ExamDeficiency__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <label>Exam Deficiency</label>
    <nameField>
        <displayFormat>EDF-{0000}</displayFormat>
        <label>Exam Deficiency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Deficiencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>