force-app/main/default/objects/ExamDeficiency__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Exam Deficiencies</relationshipLabel>
    <relationshipName>ExamDeficiencies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>