force-app/main/default/objects/ExamDeficiency__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <formula>Deficiency__r.Header__c</formula>
    <label>Header</label>
    <type>Text</type>
</CustomField>