force-app/main/default/objects/ExamDeficiency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deficiency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>